Refactor bin2c Makefile

--- a/tools/bin2c/Makefile
+++ b/tools/bin2c/Makefile
@@ -1,15 +1,35 @@
+TARGET:= bin2c
+
 ifeq ($(strip $(INSTALL_ROOT)),)
   $(error Undefined INSTALL_ROOT (install root directory))
 endif
 
-TARGET:= bin2c
+ifeq ($(strip $(BUILD_ROOT)),)
+  $(error Undefined BUILD_ROOT (build root directory))
+endif
 
-BUILD?= build
+ifeq ($(strip $(BUILD)),)
+  $(error Undefined BUILD (build directory))
+endif
+
+SUB_BUILD:=$(BUILD)/tools/$(TARGET)
 
 SILENT?= @
+V_BEGIN_BLACK= [1;30m
+V_BEGIN_RED= [1;31m
+V_BEGIN_GREEN= [1;32m
+V_BEGIN_YELLOW= [1;33m
+V_BEGIN_BLUE= [1;34m
+V_BEGIN_MAGENTA= [1;35m
+V_BEGIN_CYAN= [1;36m
+V_BEGIN_WHITE= [1;37m
+V_END= [m
 
-CCFLAGS:= \
-	-O2 \
+INSTALL:= install
+SED:= sed
+STRIP:= strip
+
+CFLAGS:= -O2 \
 	-s \
 	-Wall \
 	-Wextra \
@@ -19,43 +39,38 @@ CCFLAGS:= \
 	-Wshadow \
 	-Wno-unused \
 	-Wno-parentheses
-LDFLAGS:=
-
-SED:= sed
-INSTALL:= install
-STRIP:= strip
 
 SRCS:= bin2c.c
 
-OBJS:= $(addprefix $(BUILD)/,$(SRCS:.c=.o))
-DEPS:= $(addprefix $(BUILD)/,$(SRCS:.c=.d))
+OBJS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
+DEPS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
 
-.PHONY: all install clean distclean
+.PHONY: all clean distclean install
 
-all: $(BUILD) $(BUILD)/$(TARGET)
+all: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
 
-install: $(BUILD)/$(TARGET)
-	@printf -- "[1;34m$^[m\n"
-	$(SILENT)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
-
-clean:
-	$(RM) $(OBJS) $(DEPS) $(BUILD)/$(TARGET)
-
-distclean: clean
-	$(RM) -r $(BUILD)
-
-$(BUILD):
-	mkdir -p $@
-
-$(BUILD)/$(TARGET): $(OBJS)
-	@printf -- "[1;33m$@[m\n"
-	$(SILENT)$(CC) -o $@ $(OBJS) $(LDFLAGS)
+$(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET): $(BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
+	$(SILENT)$(CC) -o $@ $(OBJS)
 	$(SILENT)$(STRIP) -s $@
 
-$(BUILD)/%.o: %.c
-	@printf -- "[1;33m$@[m\n"
-	$(SILENT)$(CC) -Wp,-MMD,$(BUILD)/$*.d $(CCFLAGS) -c -o $@ $<
-	$(SILENT)$(SED) -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(BUILD)/$*.d \
-		> $(BUILD)/$*.d
+$(BUILD_ROOT)/$(SUB_BUILD):
+	$(SILENT)mkdir -p $@
+
+$(BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
+	$(SILENT)mkdir -p $(@D)
+	$(SILENT)$(CC) -Wp,-MMD,$(BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
+		-c -o $@ $<
+	$(SILENT)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(BUILD_ROOT)/$(SUB_BUILD)/$*.d
+
+clean:
+	$(SILENT)$(RM) $(OBJS) $(DEPS) $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+
+distclean: clean
+
+install: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(TARGET)$(V_END)\n"
+	$(SILENT)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
 
 -include $(DEPS)
