Compile ssload if HAVE_DEV_CARTRIDGE!=0

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,8 +3,13 @@ PROJECTS:= \
 	bin2c \
 	bin2o \
 	genromfs \
-	make-iso \
+	make-iso
+
+# Build ssload only if we have a development cartridge to use
+ifneq ($(strip $(OPTION_DEV_CARTRIDGE)),0)
+PROJECTS+= \
 	ssload
+endif
 
 SILENT?= @
 
