--- a/build-scripts/m68k-elf/scripts/build
+++ b/build-scripts/m68k-elf/scripts/build
@@ -12,7 +12,7 @@ mkdir -p "${BUILD_SRC_DIR}/${M68K_TARGET}/binutils"
 cd "${BUILD_SRC_DIR}/${M68K_TARGET}/binutils"
 if [ ! -f "${BUILD_SRC_DIR}/${M68K_TARGET}/configured-binutils" ]; then
     message "Configuring Binutils"
-    CFLAGS="" LDFLAGS="" ../"${BINUTILS_SRC_DIR}"/configure \
+    CFLAGS="-Wno-error=unused-value" LDFLAGS="" ../"${BINUTILS_SRC_DIR}"/configure \
         --disable-error \
         --disable-debug \
         --disable-nls \
