Add items and triggers to level

--- a/examples/games/dark-blue/Makefile
+++ b/examples/games/dark-blue/Makefile
@@ -36,7 +36,7 @@ OBJECTS:= \
 	state_splash.o \
 	state_title.o
 
-ROMDISK_DEPS:= levels/test.json romdisk/*.TGA
+ROMDISK_DEPS:= levels/test.tmx levels/test.json romdisk/*.TGA
 
 .SUFFIXES:
 .SUFFIXES: $(SUFFIXES) .tmx .json
