--- a/examples/test-suites/vdp1/Makefile
+++ b/examples/test-suites/vdp1/Makefile
@@ -15,7 +15,7 @@ IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
 
-LIBRARIES:= tga fixmath
+LIBRARIES:= tga
 OBJECTS:= \
 	root.romdisk.o \
 	fs.o \
