Fix scroll reduction functions

--- a/libyaul/Makefile
+++ b/libyaul/Makefile
@@ -401,7 +401,9 @@ CFLAGS:= -std=c99 \
 	-Wshadow \
 	-Wno-unused \
 	-Wno-parentheses \
-	-DHAVE_DEV_CARTRIDGE=$(OPTION_DEV_CARTRIDGE)
+	-DHAVE_DEV_CARTRIDGE=$(OPTION_DEV_CARTRIDGE) \
+	-DFIXMATH_NO_OVERFLOW=1 \
+	-DFIXMATH_NO_ROUNDING=1
 CFLAGS_release:= -O2 $(CFLAGS)
 CFLAGS_release-internal:= -O2 $(CFLAGS) \
 	-DRELEASE_INTERNAL
