--- a/examples/simple/nbgs/Makefile
+++ b/examples/simple/nbgs/Makefile
@@ -15,9 +15,13 @@ IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
 
-OBJECTS:= \
+OBJECTS_NO_LINK:=
+
+SH_OBJECTS:= \
 	root.romdisk.o \
 	fs.o \
 	nbgs.o
+
+M68K_PROGRAMS:=
 
 include $(INSTALL_ROOT)/share/post.common.mk
