Build M68K and add it into ROMDISK

--- a/examples/games/inkfill/Makefile
+++ b/examples/games/inkfill/Makefile
@@ -4,19 +4,8 @@ endif
 
 include $(INSTALL_ROOT)/share/pre.common.mk
 
-PROJECT:= inkfill
-
-IP_VERSION:= V1.000
-IP_RELEASE_DATE:= 20160101
-IP_AREAS:= JTUBKAEL
-IP_PERIPHERALS:= JAMKST
-IP_TITLE:= Ink Fill!
-IP_MASTER_STACK_ADDR:= 0x06100000
-IP_SLAVE_STACK_ADDR:= 0x00000000
-IP_1ST_READ_ADDR:= 0x06004000
-
-LIBRARIES:= tga
-OBJECTS:= \
+SH_PROGRAM:= inkfill
+SH_OBJECTS:= \
 	root.romdisk.o \
 	fs.o \
 	game-over.o \
@@ -26,5 +15,15 @@ OBJECTS:= \
 	scene.o \
 	title.o \
 	tutorial.o
+SH_LIBRARIES:= tga
+
+IP_VERSION:= V1.000
+IP_RELEASE_DATE:= 20160101
+IP_AREAS:= JTUBKAEL
+IP_PERIPHERALS:= JAMKST
+IP_TITLE:= Ink Fill!
+IP_MASTER_STACK_ADDR:= 0x06100000
+IP_SLAVE_STACK_ADDR:= 0x00000000
+IP_1ST_READ_ADDR:= 0x06004000
 
 include $(INSTALL_ROOT)/share/post.common.mk
