--- a/examples/simple/arp-msg/Makefile
+++ b/examples/simple/arp-msg/Makefile
@@ -4,7 +4,7 @@ endif
 
 include $(INSTALL_ROOT)/share/pre.common.mk
 
-PROJECT:= arp-msg
+SH_PROGRAM:= arp-msg
 
 IP_VERSION:= V1.000
 IP_RELEASE_DATE:= 20160101
@@ -15,6 +15,6 @@ IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
 
-OBJECTS:= main.o
+SH_OBJECTS:= main.o
 
 include $(INSTALL_ROOT)/share/post.common.mk
