--- a/examples/simple/dram-cartridge/Makefile
+++ b/examples/simple/dram-cartridge/Makefile
@@ -4,7 +4,8 @@ endif
 
 include $(INSTALL_ROOT)/share/pre.common.mk
 
-PROJECT:= dram-cartridge
+SH_PROGRAM:= dram-cartridge
+SH_OBJECTS:= dram-cartridge.o
 
 IP_VERSION:= V1.000
 IP_RELEASE_DATE:= 20160101
@@ -14,7 +15,5 @@ IP_TITLE:= dram-cartridge
 IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
-
-OBJECTS:= dram-cartridge.o
 
 include $(INSTALL_ROOT)/share/post.common.mk
