--- a/examples/simple/nbgs/Makefile
+++ b/examples/simple/nbgs/Makefile
@@ -4,7 +4,11 @@ endif
 
 include $(INSTALL_ROOT)/share/pre.common.mk
 
-PROJECT:= nbgs
+SH_PROGRAM:= nbgs
+SH_OBJECTS:= \
+	root.romdisk.o \
+	fs.o \
+	nbgs.o
 
 IP_VERSION:= V1.000
 IP_RELEASE_DATE:= 20160101
@@ -15,13 +19,7 @@ IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
 
-OBJECTS_NO_LINK:=
-
-SH_OBJECTS:= \
-	root.romdisk.o \
-	fs.o \
-	nbgs.o
-
-M68K_PROGRAMS:=
+M68K_PROGRAM:= out.m68k
+M68K_OBJECTS:= out.m68k.o
 
 include $(INSTALL_ROOT)/share/post.common.mk
