Add M68k building, closing issue #22

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -9,16 +9,21 @@ EXAMPLES:= \
 	simple/romdisk \
 	test-suites/vdp1
 
-SILENT?= @
-
 ifeq ($(strip $(INSTALL_ROOT)),)
   $(error Undefined INSTALL_ROOT (install root directory))
 endif
 
+ifeq ($(strip $(SILENT)),1)
+  ECHO=@
+else
+  ECHO=
+endif
+export ECHO
+
 .PHONY: all clean
 
 all clean:
-	$(SILENT)for example in $(EXAMPLES); do \
+	$(ECHO)for example in $(EXAMPLES); do \
 		printf -- "[1;36m$@[m [1;32mexamples/$$example[m\n"; \
 		($(MAKE) -C $$example $@) || exit $$?; \
 	done
