--- a/examples/test-suites/vdp1/Makefile
+++ b/examples/test-suites/vdp1/Makefile
@@ -2,7 +2,7 @@ ifeq ($(strip $(INSTALL_ROOT)),)
   $(error Undefined INSTALL_ROOT (install root directory))
 endif
 
-include $(INSTALL_ROOT)/share/yaul/pre.common.mk
+include $(INSTALL_ROOT)/share/pre.common.mk
 
 PROJECT:= vdp1
 
@@ -31,4 +31,4 @@ OBJECTS:= \
 
 CFLAGS+=-I.
 
-include $(INSTALL_ROOT)/share/yaul/post.common.mk
+include $(INSTALL_ROOT)/share/post.common.mk
