--- a/yaul.env.in
+++ b/yaul.env.in
@@ -7,8 +7,9 @@
 
 # Only ABSOLUTE paths are to be used when applicable!
 
-# Path to tool-chain installation directory
-export INSTALL_ROOT=${HOME}/tool-chains/sh-elf
+# Path to tool-chain installation directory. This assumes 'sh-elf' and
+# 'm68k-elf' cross-compilers are installed
+export INSTALL_ROOT=${HOME}/tool-chains
 
 # Path to where the build is to ba located
 export BUILD_ROOT=${HOME}/work/libyaul
