--- a/examples/games/dark-blue/Makefile
+++ b/examples/games/dark-blue/Makefile
@@ -2,7 +2,7 @@ ifeq ($(strip $(INSTALL_ROOT)),)
   $(error Undefined INSTALL_ROOT (install root directory))
 endif
 
-include $(INSTALL_ROOT)/share/yaul/pre.common.mk
+include $(INSTALL_ROOT)/share/pre.common.mk
 
 PROJECT:= dark-blue
 
@@ -50,4 +50,4 @@ ROMDISK_DEPS:= levels/test.tmx levels/test.json romdisk/*.TGA
 	tools/tmx2map
 	echo $(RM) $@
 
-include $(INSTALL_ROOT)/share/yaul/post.common.mk
+include $(INSTALL_ROOT)/share/post.common.mk
